<resources>
    <string name="app_name" translatable="false">NeuroSurvey</string>
    <string-array name="q1">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q2a">
        <item>@string/no</item>
        <item>@string/yes</item>
        <item>@string/notSure</item>
    </string-array>
    <string-array name="q2b">
        <item>@string/shooting_less</item>
        <item>@string/shooting_more</item>
        <item>@string/dull_achy</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="q3">
        <item>@string/immediately</item>
        <item>@string/after_1_6</item>
        <item>@string/after_7_12</item>
        <item>@string/later_1_2_years</item>
        <item>@string/later_3_4_years</item>
        <item>@string/later_5_6_years</item>
        <item>@string/later_6_7_years</item>
        <item>@string/later_8_9_years</item>
        <item>@string/later_10_years</item>
    </string-array>
    <string-array name="q4">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q5">
        <item>@string/seconds</item>
        <item>@string/minutes</item>
        <item>@string/hours</item>
        <item>@string/days</item>
    </string-array>
    <string-array name="q6">
        <item>@string/minutes</item>
        <item>@string/hours</item>
        <item>@string/days</item>
        <item>@string/weeks</item>
    </string-array>
    <string-array name="q8">
        <item>@string/same_area</item>
        <item>@string/different_area</item>
    </string-array>
    <string-array name="q9">
        <item>@string/washing_face</item>
        <item>@string/brushing_teeth</item>
        <item>@string/wind</item>
        <item>@string/cold</item>
        <item>@string/touch</item>
        <item>@string/laughing</item>
        <item>@string/talking</item>
        <item>@string/eating</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="q10">
        <item>@string/no</item>
        <item>@string/yes_as_needed</item>
        <item>@string/yes_regularly</item>
    </string-array>
    <string-array name="q11">
        <item>@string/daily</item>
        <item>@string/times_week_2_3</item>
        <item>@string/times_week_1_less</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="q12">
        <item>Drugs</item>
        <item>Dose per day</item>
    </string-array>
    <string-array name="q13a">
        <item>@string/no</item>
        <item>@string/yes_worse</item>
        <item>@string/yes_same</item>
    </string-array>
    <string-array name="q13b">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q14">
        <item>@string/immediately</item>
        <item>@string/later_1_2_months</item>
        <item>@string/later_3_5_months</item>
        <item>@string/later_6_more_months</item>
    </string-array>
    <string-array name="q19">
        <item>@string/lasted_1_6_gone</item>
        <item>@string/later_6_more_months</item>
        <item>@string/still_there_improved</item>
        <item>@string/still_same</item>
        <item>@string/getting_worse</item>
    </string-array>
    <string-array name="q20">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q21">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q22">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q23">
        <item>@string/no</item>
        <item>@string/chewing_food</item>
        <item>@string/controlling_dentures</item>
        <item>@string/dribbling</item>
        <item>@string/excessive_bitting</item>
        <item>@string/muscule_spasm</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="q24">
        <item>@string/no</item>
        <item>@string/blurred</item>
        <item>@string/bits_floating</item>
        <item>@string/eyes_not_focus</item>
        <item>@string/seeing_double</item>
        <item>@string/watering</item>
        <item>@string/eye_infection</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="q25">
    </string-array>
    <string-array name="q26">
        <item>Numbness</item>
        <item>Burning sensation</item>
        <item>Hearing loss</item>
        <item>Unsteadiness</item>
        <item>Dizziness</item>
        <item>Headaches</item>
        <item>Trouble with eating</item>
        <item>Trouble with vision/eyes</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="q26_opt">
        <item>Not at all</item>
        <item>Slightly</item>
        <item>Moderately</item>
        <item>Severely</item>
    </string-array>
    <string-array name="q27">
        <item>@string/right_time</item>
        <item>@string/should_earlier</item>
        <item>@string/should_later</item>
        <item>@string/should_never</item>
    </string-array>
    <string-array name="q29">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q30">
        <item>@string/no</item>
        <item>@string/yes</item>
    </string-array>
    <string-array name="q31">
        <item>@string/no</item>
        <item>@string/microvascular</item>
        <item>@string/rhizotomy</item>
        <item>@string/termoregulation</item>
        <item>@string/glycerol_injection</item>
        <item>@string/baloon_compression</item>
        <item>@string/gamma_knife</item>
        <item>@string/laser</item>
        <item>@string/acupuncture</item>
        <item>@string/cryosurgery</item>
        <item>@string/other</item>
    </string-array>
    <string name="no">No</string>
    <string name="notSure">Not sure</string>
    <string name="quest1">1. Have you had any type of facial pain since your last operation?</string>
    <string name="quest10">10. Have you taken any medication for the facial pain since the last operation?</string>
    <string name="quest11">11. Roughly how often in the past month have you been taking medication?</string>
    <string name="quest12">12. What drugs are you taking, and how many tablets a day?</string>
    <string name="quest13a">13a. If you had numbness before this operation has it changed as a result of this operation?</string>
    <string name="quest13b">13b. Following the operation, does any part of your face feel numb that was not numb before?</string>
    <string name="quest14">14. How soon after the operation did the numbness begin?</string>
    <string name="quest15">15. How severe is the numbness (compared to stages of a dental injection wearing off)?</string>
    <string name="quest16">16. How painful is it to touch this area of numbness?</string>
    <string name="quest17">17. What degree of burning or other altered sensation do you have on the same side of your face as the operation site?</string>
    <string name="quest18">18. Did the operation result in any hearing loss? How severe?</string>
    <string name="quest19">19.Has the hearing loss changed in any way?</string>
    <string name="quest20">20. Do you feel unsteady on your feet as a result of the operation?</string>
    <string name="quest21">21. Do you suffer from more dizziness than usual following this operation?</string>
    <string name="quest22">22. Do you suffer from more headaches than usual following this operation?</string>
    <string name="quest23">23. Following the operation do you have any difficulty with eating that you didn’t have before?</string>
    <string name="quest24">24. Have you got any problems with your vision that you didn’t have before this operation? (please tick all that apply)</string>
    <string name="quest25">25. Have you got any other complications that we have not mentioned? If yes, please list.</string>
    <string name="quest26">26. Please state how the complications (from questions 13–25) currently affect the quality of your life, if at all:</string>
    <string name="quest27">27. Looking back now, how would you consider the timing of your surgery?</string>
    <string name="quest28">28. Overall how satisfied are you with your current situation in comparison to before the operation?</string>
    <string name="quest29">29. In the last month have you felt a lack of pleasure in life?</string>
    <string name="quest2a">2a. Does the pain you have now, feel the same as it did before your operation?</string>
    <string name="quest2b">2b. Indicate how it is different.</string>
    <string name="quest3">3. Following your most recent operation, when did you first experience the pain?</string>
    <string name="quest30">30. In the last month have you felt depressed?</string>
    <string name="quest31">31. Have you had any treatments other than medications for your trigeminal neuralgia in the past year? Please give details if yes.</string>
    <string name="quest4">4. Is the pain continuous?</string>
    <string name="quest5">5. How long does a single incident of pain last?</string>
    <string name="quest6">6. How long do you usually go without any episodes of pain?</string>
    <string name="quest7">7. How intense does the pain feel?</string>
    <string name="quest8">8. Where is the pain?</string>
    <string name="quest9">9. Do any of these activities set the pain off?</string>
    <string name="yes">Yes</string>
    <string name="acupuncture">Acupuncture</string>
    <string name="after_1_6">1-6 months after</string>
    <string name="after_7_12">7-12 months after</string>
    <string name="baloon_compression">Balloon compression</string>
    <string name="bits_floating">Bits floating</string>
    <string name="blurred">Blurred</string>
    <string name="brushing_teeth">Brushing teeth</string>
    <string name="chewing_food">With chewing food</string>
    <string name="cold">Cold</string>
    <string name="controlling_dentures">With controlling dentures</string>
    <string name="cryosurgery">Cryosurgery</string>
    <string name="daily">Daily</string>
    <string name="days">Days</string>
    <string name="different_area">Different area than before operation</string>
    <string name="dribbling">With dribbling</string>
    <string name="dull_achy">It is dull / achy now</string>
    <string name="eating">Eating</string>
    <string name="excessive_bitting">With excessive bitting of cheek</string>
    <string name="eye_infection">Eye infection</string>
    <string name="eyes_not_focus">Eyes do not focus well</string>
    <string name="gamma_knife">Gamma knife</string>
    <string name="getting_worse">It\'s getting worse</string>
    <string name="glycerol_injection">Glycerol injection</string>
    <string name="hours">Hours</string>
    <string name="immediately">Immediately</string>
    <string name="laser">Laser</string>
    <string name="lasted_1_6_gone">Lasted 1-6 months but now it\'s gone</string>
    <string name="lasted_6_more_gone">Lasted 6+ months but now it\'s gone</string>
    <string name="later_10_years">Over 10 years later</string>
    <string name="later_1_2_months">1-2 months later</string>
    <string name="later_1_2_years">1-2 years later</string>
    <string name="later_3_4_years">3-4 years later</string>
    <string name="later_3_5_months">3-5 months later</string>
    <string name="later_5_6_years">5-6 years later</string>
    <string name="later_6_7_years">6-7 years later</string>
    <string name="later_6_more_months">6 or more months later</string>
    <string name="name">Name and surname</string>
    <string name="operation_date">Date of operation</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="next">Next</string>
    <string name="operation_name">Last operation name</string>
</resources>