<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sawicka.neurosurvey.NewTestActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:text="@string/quest1"
            android:textSize="17sp"
            android:layout_height="wrap_content" android:layout_width="match_parent" />
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

        <TextView android:text="@string/quest2a"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q2a"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest2a"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q2b"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>
        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <TextView android:text="@string/quest3"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q3"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest4"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q4"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest5"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q5"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest6"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q6"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest7"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <SeekBar android:id="@+id/seek_bar_7"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:max="7"/>
        <LinearLayout android:id="@+id/q7_layout_label"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView android:text="@string/quest8"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q8"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest9"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q9"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"/>
        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <TextView android:text="@string/quest10"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q10"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest11"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q11"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>
        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <TextView android:text="@string/quest12"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <!--TODO: Lista leków i ich ilości-->

        <TextView android:text="@string/quest13a"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q13a"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest13b"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q13b"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest14"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q14"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest15"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <SeekBar
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:max="7"/>
        <LinearLayout android:id="@+id/q15_layout_label"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView android:text="@string/quest16"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <SeekBar
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:max="7"/>
        <LinearLayout android:id="@+id/q16_layout_label"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView android:text="@string/quest17"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <SeekBar
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:max="7"/>
        <LinearLayout android:id="@+id/q17_layout_label"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView android:text="@string/quest18"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <SeekBar
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:max="7"/>
        <LinearLayout android:id="@+id/q18_layout_label"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView android:text="@string/quest19"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q19"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest20"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q20"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest21"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q21"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest22"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q22"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest23"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q23"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"/>
        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <TextView android:text="@string/quest24"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q24"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"/>
        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <TextView android:text="@string/quest25"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <!--TODO: Lista zażaleń-->

        <TextView android:text="@string/quest26"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <!--TODO: by to ładnie wyglądało i dobrze się użytkowało-->

        <TextView android:text="@string/quest27"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q27"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest28"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <SeekBar android:id="@+id/seek_bar_28"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:max="7"/>
        <LinearLayout android:id="@+id/q28_layout_label"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView android:text="@string/quest29"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q29"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest30"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q30"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView android:text="@string/quest31"
            android:textSize="17sp" android:layout_marginTop="15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/lv_q31"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"/>
        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <Button android:id="@+id/button_save"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Save"
            android:layout_gravity="end" android:layout_marginTop="15dp"/>
    </LinearLayout>
</ScrollView>
