<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patient_personal_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.sawicka.neurosurvey.activity.PatientPersonalDetailsActivity"
    android:focusableInTouchMode="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/name" android:textSize="17sp"/>
        <EditText android:id="@+id/name_value"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/age" android:textSize="17sp" android:layout_marginTop="15dp"/>
        <EditText android:id="@+id/age_value"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"/>

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <com.sawicka.neurosurvey.utils.NoScrollListView android:id="@+id/gender_list_view"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/operation_date" android:textSize="17sp" android:layout_marginTop="15dp"/>
        <DatePicker android:id="@+id/operation_date_picker"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:datePickerMode="spinner" android:calendarViewShown="false"/>

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/operation_name" android:textSize="17sp" android:layout_marginTop="15dp"/>
        <EditText android:id="@+id/operation_name_value"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text"/>

        <Button android:id="@+id/button_next_open_test"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/next" android:layout_gravity="end"/>
    </LinearLayout>
</ScrollView>
